--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,6 +8,8 @@ noinst_PROGRAMS = \
 	random-test-client \
 	unit-test-server \
 	unit-test-client \
+    unit-test-ping-server \
+    unit-test-ping-client \
 	version
 
 common_ldflags = \
@@ -33,6 +35,12 @@ unit_test_server_LDADD = $(common_ldflags)
 
 unit_test_client_SOURCES = unit-test-client.c unit-test.h
 unit_test_client_LDADD = $(common_ldflags)
+
+unit_test_ping_server_SOURCES = unit-test-ping-server.c unit-test.h
+unit_test_ping_server_LDADD = $(common_ldflags)
+
+unit_test_ping_client_SOURCES = unit-test-ping-client.c unit-test.h
+unit_test_ping_client_LDADD = $(common_ldflags)
 
 version_SOURCES = version.c
 version_LDADD = $(common_ldflags)
